--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ html {
 /* HEADER */
 header {
   width: 85%;
-  margin: 18px auto 0;
+  margin: 25px auto 0;
   display: flex;
   justify-content: space-between;
   font-family: var(--font-raleway);
@@ -32,6 +32,8 @@ header {
 }
 .logo-container img {
   width: 50%;
+  min-width: 75px;
+  max-width: 150px;
 }
 .menu-container {
   width: 50%;
@@ -56,6 +58,7 @@ main {
   width: 85%;
   margin: 85px auto 0;
   display: flex;
+  flex-direction: column;
   font-family: var(--font-openSans);
 }
 /* HERO */
@@ -69,6 +72,7 @@ main {
 .hero__imageContainer {
   margin: 0 auto;
   width: 90%;
+  min-width: 75px;
 }
 .hero__imageContainer img {
   width: 100%;
@@ -108,6 +112,12 @@ main {
   font-weight: bold;
   letter-spacing: 1px;
   color: white;
+}
+
+/* PRODUCT */
+.product {
+  margin-top: 20px;
+  display: flex;
 }
 
 .attribution {
